allow to use the playbook inside docker container

--- a/ansible/identity/dev/vars.yml
+++ b/ansible/identity/dev/vars.yml
@@ -1,5 +1,5 @@
 ---
-DOMAIN_NAME: ""
+DOMAIN_NAME: "forge.local"
 DATACORE: "home/{{ USER_NAME }}/data"
 DOMAIN_CERT_NAME: ""
 DOMAIN_CERT_KEY_NAME: ""
