--- a/ansible/roles/infra_storage/tasks/setup_fdroid.yml
+++ b/ansible/roles/infra_storage/tasks/setup_fdroid.yml
@@ -20,6 +20,10 @@
     group: "{{ USER_NAME }}"
     state: directory
 
+- name: "Check for authorized_keys"
+  local_action: stat path=files/authorized_keys
+  register: stat_authorized_keys
+
 - name: "Copy authorized_keys for root"
   copy:
     src: "files/fdroid/authorized_keys"
@@ -27,6 +31,7 @@
     owner: "root"
     group: "root"
     mode: u=rw,g=r,o=r
+  when: stat_authorized_keys.stat.exists
 
 - name: "Copy basic configuration for admin credentials"
   template:
