--- a/ansible/identity/dev/vars.yml
+++ b/ansible/identity/dev/vars.yml
@@ -6,3 +6,4 @@ DOMAIN_CERT_KEY_NAME: ""
 DEFAULT_ADMIN_NAME: "admin"
 USER_NAME: "forge"
 USER_MAIL: "{{ USER_NAME }}@{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, 'exemple.org') }}"
+SKIP_SERVICES: []
