--- a/ansible/roles/infra_ci/tasks/setup_jenkins.yml
+++ b/ansible/roles/infra_ci/tasks/setup_jenkins.yml
@@ -3,11 +3,16 @@
   shell: "id -u {{ USER_NAME }}"
   register: user_id
 
+- name: "Get group ID"
+  shell: "id -g {{ USER_NAME }}"
+  register: group_id
+
 - name: "Set correct owner of full jenkins data directory"
   file:
     path: "/{{DATACORE}}/jenkins"
     owner: "{{ user_id.stdout }}"
-    group: "{{ user_id.stdout }}"
+    group: "{{ group_id.stdout }}"
+    mode: 0777
     recurse: yes
 
 - name: "Remove previous jenkins tmp directory"
@@ -44,7 +49,7 @@
          JENKINS_VERSION: "{{ JENKINS_VERSION }}"
          JENKINS_SHA: "{{ JENKINS_SHA_256 }}"
          uid: "{{ user_id.stdout }}"
-         gid: "{{ user_id.stdout }}"
+         gid: "{{ group_id.stdout }}"
   become: true
   become_user: "{{ USER_NAME }}"
 
@@ -159,7 +164,7 @@
   file:
     path: "/{{DATACORE}}/jenkins"
     owner: "{{ user_id.stdout }}"
-    group: "{{ user_id.stdout }}"
+    group: "{{ group_id.stdout }}"
     recurse: yes
 
 - name: "Restart jenkins container"
