--- a/ansible/roles/infra/vars/main.yml
+++ b/ansible/roles/infra/vars/main.yml
@@ -5,7 +5,7 @@ BACKUP_REMOTE_PATH: "Disque dur/backups"
 
 TRAEFIK_VERSION: "2.4.0"
 TRAEFIK_FRONT_PORT: "8000"
-TRAEFIK_EXTERNAL_URL: "traefik.{{ DOMAIN_NAME }}"
+TRAEFIK_EXTERNAL_URL: "traefik.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 TRAEFIK_USE_LETSENCRYPT: false
 TRAEFIK_ENTRYPOINT_MAP:
   - { port: "{{ NGINX_FRONT_PORT }}", name: "homepage" }
@@ -29,13 +29,13 @@ TRAEFIK_ENTRYPOINT_MAP:
 
 NGINX_VERSION: "1.19.6"
 NGINX_FRONT_PORT: "8001"
-NGINX_EXTERNAL_URL: "home.{{ DOMAIN_NAME }}"
+NGINX_EXTERNAL_URL: "home.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 
 PORTAINER_VERSION: "2.0.1"
 PORTAINER_PORT: "8010"
-PORTAINER_EXTERNAL_URL: "portainer.{{ DOMAIN_NAME }}"
+PORTAINER_EXTERNAL_URL: "portainer.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 
 NETDATA_VERSION: "v1.28.0"
 NETDATA_PORT: "8011"
-NETDATA_EXTERNAL_URL: "monitor.{{ DOMAIN_NAME }}"
+NETDATA_EXTERNAL_URL: "monitor.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 NETDATA_DEFAULT_STATE: stopped
