--- a/ansible/roles/infra_ci/vars/main.yml
+++ b/ansible/roles/infra_ci/vars/main.yml
@@ -1,8 +1,8 @@
 GOGS_VERSION: "0.12.3"
 GOGS_FRONT_PORT: "8021"
 GOGS_SSH_PORT: "{{ GIT_SSH_PORT }}"
-GOGS_EXTERNAL_URL: "git.{{ DOMAIN_NAME }}"
-GOGS_URL: "https://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ GOGS_FRONT_PORT }}"
+GOGS_EXTERNAL_URL: "git.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
+GOGS_URL: "https://{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, hostvars[inventory_hostname]['ansible_default_ipv4']['address']) }}:{{ GOGS_FRONT_PORT }}"
 GOGS_DEFAULT_STATE: stopped
 
 REDMINE_VERSION: "4.1.1"
@@ -11,7 +11,7 @@ REDMINE_DB_USER: "redmine_user"
 REDMINE_DB_PASS: "redmine_pass"
 REDMINE_DB_NAME: "redmine"
 REDMINE_FRONT_PORT: "8024"
-REDMINE_EXTERNAL_URL: "redmine.{{ DOMAIN_NAME }}"
+REDMINE_EXTERNAL_URL: "redmine.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 REDMINE_DEFAULT_STATE: stopped
 
 # Use https://updates.jenkins-ci.org/download/war/ to get the version package checksum
@@ -19,7 +19,7 @@ JENKINS_VERSION: "2.277"
 JENKINS_SHA_256: "bc5ca0002d7db14cfc5a728e5fc2a32ef943795cbed194e702fded87cc04d255"
 JENKINS_PORT_CONFIG: 9000
 JENKINS_PORT: "8023"
-JENKINS_EXTERNAL_URL: "ci.{{ DOMAIN_NAME }}"
+JENKINS_EXTERNAL_URL: "ci.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 JENKINS_DEFAULT_STATE: stopped
 JENKINS_USER: "{{ DEFAULT_ADMIN_NAME }}"
 JENKINS_RESTART_DELAY: 100
@@ -46,8 +46,8 @@ JENKINS_CREDENTIALS:
     username: "{{ nexus_deploy_username }}"
     password: "{{ nexus_deploy_password }}"
 JENKINS_GLOBAL_ENV:
-  gogs_repositories_url: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ GOGS_SSH_PORT }}"
-  nexus_repositories_url: "https://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ NEXUS_PORT }}"
-  nexus_docker_pull_url: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ NEXUS_DOCKER_PULL_PORT }}"
-  nexus_docker_push_url: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ NEXUS_DOCKER_PUSH_PORT }}"
-  fdroid_apk_push_url: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ FDROID_SSH_PORT }}"
+  gogs_repositories_url: "{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, hostvars[inventory_hostname]['ansible_default_ipv4']['address']) }}:{{ GOGS_SSH_PORT }}"
+  nexus_repositories_url: "{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, hostvars[inventory_hostname]['ansible_default_ipv4']['address']) }}:{{ NEXUS_PORT }}"
+  nexus_docker_pull_url: "{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, hostvars[inventory_hostname]['ansible_default_ipv4']['address']) }}:{{ NEXUS_DOCKER_PULL_PORT }}"
+  nexus_docker_push_url: "{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, hostvars[inventory_hostname]['ansible_default_ipv4']['address']) }}:{{ NEXUS_DOCKER_PUSH_PORT }}"
+  fdroid_apk_push_url: "{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, hostvars[inventory_hostname]['ansible_default_ipv4']['address']) }}:{{ FDROID_SSH_PORT }}"
