--- a/ansible/roles/infra_hard/vars/main.yml
+++ b/ansible/roles/infra_hard/vars/main.yml
@@ -1,24 +1,24 @@
 MQTT_VERSION: "1.6.12"
 MQTT_FRONT_PORT: "8030"
-MQTT_EXTERNAL_URL: "mqtt.{{ DOMAIN_NAME }}"
+MQTT_EXTERNAL_URL: "mqtt.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 MQTT_READ_USER: "reader"
 MQTT_RW_USER: "writer"
 MQTT_DEFAULT_STATE: stopped
 
 NODERED_VERSION: "1.2.7-10"
 NODERED_FRONT_PORT: "8031"
-NODERED_EXTERNAL_URL: "flows.{{ DOMAIN_NAME }}"
+NODERED_EXTERNAL_URL: "flows.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 NODERED_DEFAULT_STATE: stopped
 
 OCTOPRINT_VERSION: "1.5.3"
 OCTOPRINT_PORT: "8033"
-OCTOPRINT_EXTERNAL_URL: "printers.{{ DOMAIN_NAME }}"
+OCTOPRINT_EXTERNAL_URL: "printers.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 OCTOPRINT_DEVICE_0: "/dev/null"
 OCTOPRINT_DEVICE_1: "/dev/null"
 OCTOPRINT_DEFAULT_STATE: stopped
 
 INSOLANTE_VERSION: "1.1.0-beta"
 INSOLANTE_PORT: "8032"
-INSOLANTE_URL: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
-INSOLANTE_EXTERNAL_URL: "pcb.{{ DOMAIN_NAME }}"
+INSOLANTE_URL: "{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, hostvars[inventory_hostname]['ansible_default_ipv4']['address']) }}"
+INSOLANTE_EXTERNAL_URL: "pcb.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 INSOLANTE_DEFAULT_STATE: stopped
